--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,9 +2,9 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the branch designed for imports
   push:
-    branches: ["main"]
+    branches: ["import"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
