--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Post-Release Workflow
 
 on:
   release:
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -33,7 +34,7 @@ jobs:
              Will update the `prod` branch (production branch designed for importing) to use
              the current release contents.
           CONTENT_COMPARISON: true
-          REVIEWERS: "[]"
+          REVIEWERS: '[]'
   deploy:
     name: Deploy to GH Pages
     environment:
