--- a/.github/ISSUE_TEMPLATE/blank.yml
+++ b/.github/ISSUE_TEMPLATE/blank.yml
@@ -1,3 +1,7 @@
 name: Blank Issue
 description: Create an issue from scratch. If you are submitting something listed here, please use that template - they are guided and are more easier to use.
 body:
+- type: textarea
+  id: markdown
+  attributes:
+    label: Description
