--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Discussions
-    url: https://github.com/TylerMS887/adwaita.css/discussions
+    url: https://github.com/TylerMS887/adwaita.css/discussions/new
     about: Start a new discussion
