--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ name: Post-Release Workflow
 
 on:
   release:
-  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -24,6 +23,11 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.3.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
@@ -36,3 +40,12 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      - name: Upload Multiple Release Assets
+        # You may pin to the exact commit or the version.
+        # uses: NBTX/upload-release-assets@f68d1c91ca950f33ee35514883819c2bb053f487
+        uses: NBTX/upload-release-assets@v1
+        with:
+          # The URL for uploading assets to the release
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          # A glob of assets to upload
+          targets: adwaita*.css
